readded overflow for bug fix

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,6 +1,3 @@
-html {
-  overflow: hidden;
-}
 .App {
   height: 92vh;
   padding: 3rem;
